added layout _base + renamed rel path prefixer

--- a/src/pages/about/index.html
+++ b/src/pages/about/index.html
@@ -1,8 +1,7 @@
 ---
+layout: _base.html
 title: About Us
 ---
-
-{% include _head.html %}
 
 <section class="nma-hero">
 
@@ -19,5 +18,3 @@ title: About Us
     </div>
 
 </section>
-
-{% include _foot.html %}
