--- a/src/pages/about/nma-faculty/index.html
+++ b/src/pages/about/nma-faculty/index.html
@@ -1,8 +1,7 @@
 ---
+layout: _base.html
 title: NMA Faculty
 ---
-
-{% include _head.html %}
 
     <section class="nma-hero">
 
@@ -20,5 +19,3 @@ title: NMA Faculty
         </div>
 
     </section>
-
-{% include _foot.html %}
