--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,20 +1,19 @@
 ---
+layout: _base.html
 title: Home
 ---
-
-{% include _head.html %}
 
   <section class="nma-hero">
     <div class="nma-container">
 
       <h1 class="nma-runninghead">Kapi‘olani Community College</h1>
 
-      <h2 class="nma-display-large">New Media Arts</h2>
+      <h2 class="nma-display-large">New Media Arts Hero</h2>
 
       <p>The New Media Arts (NMA) program is a two year AS degree program at Kapi‘olani Community College in Honolulu,
         Hawaii. Our mission is to prepare students for employment in the fields of interface design and animation.</p>
 
-      <a href="about/index.html" class="nma-button">Learn More About NMA</a>
+      <a href="about/index.html" class="nma-button">Learn More About NMA huh</a>
       <a href="" class="nma-button">View Student Projects</a>
       <a href="" class="nma-button">NMA Degree Info</a>
         
@@ -72,5 +71,3 @@ title: Home
 
     </div>
   </section>
-
-{% include _foot.html %}
