--- a/src/pages/styleguide/index.html
+++ b/src/pages/styleguide/index.html
@@ -1,8 +1,7 @@
 ---
+layout: _base.html
 title: Style Guide
 ---
-
-{% include _head.html %}
 
 <section class="nma-hero">
     <div class="nma-container">
@@ -125,5 +124,3 @@ title: Style Guide
 
     </div>
 </section>
-
-{% include _foot.html %}
