Updated 16 files. Removed initial NMA v3.5 content.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,16 +6,13 @@ title: Home
   <section class="nma-hero">
     <div class="nma-container">
 
-      <h1 class="nma-runninghead">Kapi‘olani Community College</h1>
+      <h1 class="nma-runninghead">Running Head</h1>
 
-      <h2 class="nma-display-large">New Media Arts Hero</h2>
+      <h2 class="nma-display-large">Large Headline</h2>
 
-      <p>The New Media Arts (NMA) program is a two year AS degree program at Kapi‘olani Community College in Honolulu,
-        Hawaii. Our mission is to prepare students for employment in the fields of interface design and animation.</p>
+      <p>Lorem ipsum et dolorem.</p>
 
-      <a href="about/index.html" class="nma-button">Learn More About NMA huh</a>
-      <a href="" class="nma-button">View Student Projects</a>
-      <a href="" class="nma-button">NMA Degree Info</a>
+      <a href="about/index.html" class="nma-button">Go to the About Sub Page</a>
         
     </div>
   </section>
@@ -26,10 +23,9 @@ title: Home
       <div class="nma-row">
         <div class="nma-column">
 
-          <h2 class="nma-runninghead">Degree Info</h2>
-          <h3>Earn a Degree Having Fun</h3>
-          <p>Wait… what? I can take real college classes learning how to make sweet graphics and cool animations? …and earn a college degree? …and a job after I graduate? This sounds too good to be true, but it isn’t. We offer a 60+ credit Associate of Science (A.S.) degree in either animation or interface design, both of which are super creative, highly technical, and loads of fun!</p>
-          <a href="#" class="nma-button">Learn More About the NMA Degree</a>
+          <h2 class="nma-runninghead">Another Running head</h2>
+          <h3>A Sub Section Heading</h3>
+          <p>Lorem ipsum this is a paragraph.</p>
 
         </div>
         <div class="nma-column">
@@ -38,7 +34,7 @@ title: Home
             <video playsinline autoplay muted loop poster="img/liana-one-in-million-clip-poster.jpeg">
               <source src="video/liana-one-in-million-clip.mp4" type="video/mp4">
             </video>
-            <figcaption>Liana Young — One in a Million</figcaption>
+            <figcaption>Caption goes here</figcaption>
           </figure>
 
         </div>
@@ -53,18 +49,16 @@ title: Home
       <div class="nma-row">
         <div class="nma-column">
 
-          <h2 class="nma-runninghead">Study</h2>
-          <h3>Animation</h3>
-          <p>The Animation specialization prepares students for careers in 3D computer animation, video game development, and emerging industries employing 3D computer graphics. Topics include the full computer graphics (cg) pipeline, film analysis and storytelling, digital painting, and demo reel development.</p>
-          <a href="#" class="nma-button">View the Animation Curriculum</a>
+          <h2 class="nma-runninghead">Runnig Head</h2>
+          <h3>This is a One Half Column Heading</h3>
+          <p>Lorem ipsum this is a paragraph.</p>
 
         </div>
         <div class="nma-column">
 
-          <h2 class="nma-runninghead">Study</h2>
-          <h3>Interface Design</h3>
-          <p>The Interface Design specialization prepares students for careers as interface designers with a focus on web design. Topics include graphic design, typography, graphic symbolism, user interface design, front-end web development, and motion graphic design. Additional courses include digital imaging, design history, and portfolio development.</p>
-          <a href="#" class="nma-button">View the Interface Design Curriculum</a>
+          <h2 class="nma-runninghead">Runnig Head</h2>
+          <h3>This is a One Half Column Heading</h3>
+          <p>Lorem ipsum this is a paragraph.</p>
 
         </div>
       </div>
