--- a/src/pages/about/index.html
+++ b/src/pages/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: _base.html
-title: About Us
+title: About Page
 ---
 
 <section class="nma-hero">
@@ -8,12 +8,9 @@ title: About Us
     <div class="nma-container">
 
         <h1 class="nma-runninghead">{{ title }}</h1>
-        <h2 class="nma-display-large">What is NMA?</h2>
-        <h3>Animation &amp; Interface Design</h3>
-        <p>The New Media Arts (NMA) program is a two year AS degree program located at Kapi‘olani Community College (KCC) in Honolulu, Hawaii. The NMA mission is to prepare students for employment in the fields of interface design and animation.</p>
-
-        <a href="" class="nma-button">Meet the NMA Faculty</a>
-        <a href="" class="nma-button">Read About NMA Graduates</a>
+        <h2 class="nma-display-large">About Sub Page</h2>
+        <h3>Tagline Can go Here</h3>
+        <p>This is a paragraph.</p>
         
     </div>
 
