--- a/src/pages/styleguide/index.html
+++ b/src/pages/styleguide/index.html
@@ -22,7 +22,7 @@ title: Style Guide
 <section>
     <div class="nma-container">
 
-        <h2 class="nma-runninghead">Typography</h2>
+        <h2 class="nma-runninghead">Running Head</h2>
 
         <h1>This is a Heading 1</h1>
         <h2>This is a Heading 2</h2>
